2002-07-03  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc: Fade palette back in at end of setup().
	* usecode/ucinternal.cc:  Always call link_party(), even if new
	game, and set party_count to 0.

2002-07-03  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* objnames.cc: implemented "x's ashes" name in SI
	* font.cc: fixed word wrapping off-by-hlead

2002-07-02  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc (Game_window): Set singleton after creating pal.
	* Various:  Merged in activate() fixes from 1.00 branch.

2002-07-02  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* objs.cc: fixes to SI item names (thanks sb-x)
	* objnames.cc: moved naming code to separate file

2002-07-01  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* objs.cc: even more item names for SI

2002-07-01  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* shapeid.h: let paint_shape paint non-rle shapes properly
	* vgafile.cc: assert(rle); in the paint_rle_* functions
	* objs.cc: more item names for SI

2002-06-30  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* objs.cc: finally fixed 'blood' names

2002-06-30  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* Configuration.*, exult.cc: added -c option for alternate config files
	  (quite useful if you have multiple data dirs or languages of BG/SI)

2002-06-29  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* singles.h, shapeid.cc: added pal = gwin->get_pal() to singles
	* *game.*, txtscroll.*: got rid of extra Palette objects

2002-06-28  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.h (public): Game_clock is now a pointer.
	* exult.cc,game.cc:  --nomenu arg skips game menu.

2002-06-28  Jeff Freedman  <jsf@usf-cf-x86-linux-1>

	* gamewin.h (public): Reordered and added comments.

2002-06-27  Jeff Freedman  <jsf@usf-cf-x86-linux-1>

	* shapeid.*,etc:  Text routines moved to Shape_manager.