@@ -1,5 +1,7 @@
 2002-07-03  Jeff Freedman  <jeff@amy.nerble.net>
 
+	* effects.cc (Projectile_effect): Delay for delayed-explosions.
+
 	* gamewin.cc: Fade palette back in at end of setup().
 	* usecode/ucinternal.cc:  Always call link_party(), even if new
 	game, and set party_count to 0.
